[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gui/buttons/audioOff.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/buttons/audioOn.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/buttons/musicOn.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/buttons/musicOff.png" type="Texture" id=4]
[ext_resource path="res://src/menus/AudioSettings.gd" type="Script" id=5]

[node name="AudioSettings" type="VBoxContainer"]
margin_left = 60.0
margin_top = 164.0
margin_right = 191.0
margin_bottom = 248.0
script = ExtResource( 5 )

[node name="Sound" type="HBoxContainer" parent="."]
margin_right = 244.0
margin_bottom = 40.0

[node name="SoundToggle" type="TextureButton" parent="Sound"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Sound"]
margin_left = 44.0
margin_top = 13.0
margin_right = 164.0
margin_bottom = 27.0
rect_min_size = Vector2( 120, 0 )
text = "Sound"

[node name="SoundToggle2" type="CheckButton" parent="Sound"]
margin_left = 168.0
margin_right = 244.0
margin_bottom = 40.0
pressed = true

[node name="Music" type="HBoxContainer" parent="."]
margin_top = 44.0
margin_right = 244.0
margin_bottom = 84.0

[node name="MusicToggle" type="TextureButton" parent="Music"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Music"]
margin_left = 44.0
margin_top = 13.0
margin_right = 164.0
margin_bottom = 27.0
rect_min_size = Vector2( 120, 0 )
text = "Music"

[node name="MusicToggle2" type="CheckButton" parent="Music"]
margin_left = 168.0
margin_right = 244.0
margin_bottom = 40.0
pressed = true

[connection signal="toggled" from="Sound/SoundToggle" to="." method="_on_SoundToggle_toggled"]
[connection signal="toggled" from="Sound/SoundToggle2" to="." method="_on_SoundToggle2_toggled"]
[connection signal="toggled" from="Music/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="toggled" from="Music/MusicToggle2" to="." method="_on_MusicToggle2_toggled"]
